@@ -1,9 +1,9 @@
 # Minecraft(Purpur) server via Docker
-Данный контейнер позволяет вам запустить minecraft на ядре Purpur версии 1.20.1 или любой иной версии ядра, которой вы захотите, если она будет в репозитрии Purpur.
+Данный контейнер позволяет вам запустить minecraft на ядре Purpur версии 1.20.1 или любой иной версии ядра, которой вы захотите, если она будет в репозитрии Purpur. Данное решение разработанно для построение на его основе сервера с конфигурацией >=12 ГБ ОЗУ и 8 ядер/16 потоков.
 
 # Что надо для запуска
 
-## 1. Docker:
+## 1. [Docker](https://docs.docker.com/engine/install/):
 ### Операционная система:
 - Linux: Docker поддерживает большинство распространенных дистрибутивов Linux, таких как Ubuntu, Debian, CentOS и другие.
 - Windows: Docker поддерживает Windows 10 Pro, Enterprise или Education (64-бит) с включенной подсистемой Windows для Linux (WSL 2).
@@ -13,7 +13,7 @@
 64-битный процессор с виртуализацией включенной в BIOS/UEFI.
 
 ### Память (RAM):
-Рекомендуется не менее 6 ГБ оперативной памяти.
+Рекомендуется не менее 12 ГБ оперативной памяти.
 Для минимального запуска/тестирования рекомендуется 1 ГБ оперативной памяти.
 
 ### Хранилище:
@@ -23,7 +23,7 @@
 ### Интернет-соединение:
 Для загрузки образов контейнеров и других ресурсов.
 
-## Docker Compose (по желанию):
+## 2. [Docker Compose](https://docs.docker.com/compose/install/) (по желанию):
 - Установленный Docker: Docker Compose требует установленного Docker на хост-системе.
 - Python: Docker Compose написан на языке Python, поэтому требуется наличие Python на вашей системе.
 
@@ -45,3 +45,43 @@ docker run -d \
 ```
   - ```/path/to/purpur_data``` Заменить на локальный путь к папке хранения данных на хосте.
 
+```yml
+version: "3"
+
+services:
+  minecraft:
+    image: "towinok/purpur-server:latest"
+    restart: always
+    container_name: "purpur"
+    volumes:
+      - "/path/to/purpur_data:/data:rw"
+    ports:
+      - "25565:25565/tcp"
+    stdin_open: true
+    tty: true
+```
+  - ```/path/to/purpur_data``` Заменить на локальный путь к папке хранения данных на хосте.
+## Доступные Environments
+- ```VERSION``` Версия Minecraft/PurpurMC сервера.
+  - Default ARG: ```1.20.1```
+- ```MEMORYSIZE``` Размер выделенной памяти для Java процесса Minecraft сервера.
+  - Default ARG: ```1G```
+- ```JAVAFLAGS``` Дополнительные флаги Java, используемые для настройки Java виртуальной машины.
+  - Default ARG для 8 ядер 16 потоков и >=12G GB ОЗУ:
+    ```yml
+    -Djava.awt.headless=true -Dterminal.jline=false -Dterminal.ansi=true -XX:+UseZGC -XX:MaxGCPauseMillis=16 -XX:ActiveProcessorCount=8 -XX:+UseNUMA -XX:+AlwaysPreTouch -XX:+UseStringDeduplication -XX:+ParallelRefProcEnabled XX:+PerfDisableSharedMem -XX:InitiatingHeapOccupancyPercent=20 -Dcom.mojang.eula.agree=true
+    ```
+  - ПРЕДУПРЕЖДЕНИЕ! Если у вас меньше 12 гб, то прошу использовать флаги от [Aikar](https://flags.sh)
+- ```ADD_FLAGS``` Дополнительные флаги и параметры для запуска Minecraft/PurpurMC сервера.
+  - Dedault ARG
+      ```yml
+     --nojline -C ./config/commands.yml -S ./config/spigot.yml -b ./config/bukkit.yml -c ./config/server.properties --pufferfish-settings ./config/pufferfish.yml --purpur-settings ./config/purpur.yml --paper-settings-directory ./config/paper/  -d "yyyy-MM-dd HH:mm:ss" --world-dir ./worlds/
+    ```
+    - ```--world-dir ./worlds/'``` Папка с мирами по умолчанию.
+    - ```--paper-settings-directory ./config/paper/``` ./config => paper/ => конфигураций Paper
+    - ```--purpur-settings ./config/purpur.yml``` ./config => конфигураций Purpur
+    - ```./config/pufferfish.yml --purpur-settings ``` ./config => конфигураций Pufferfish
+    - ```-C ./config/commands.yml``` ./config => конфигурационный файл для создания алиасов команд (не рекомендуется к настройке).
+    - ```-S ./config/spigot.yml``` ./config => Конфигурация Spigot
+    - ```-b ./config/bukkit.yml``` ./config => Конфигурация bukkit
+  
